# RAG_alquran

./: Cargo.toml
src/: main.rs
